--- a/backend/templates/article.html
+++ b/backend/templates/article.html
@@ -97,25 +97,6 @@
                                 </h2> 
                         </div> 
                         <div class="article_left_box_mid">
-                                <style type="text/css"> 
-                                        #streammap{
-                                                border:8px solid #ffffff;
-                                                height:230px;
-                                                margin:0px 0px 10px 0px;
-                                                width:660px;
-                                        }
-                                        .streamcontent {
-                                                -moz-border-radius:15px;
-                                                border:1px solid #ADA699;
-                                                clear:both;
-                                                display:block;
-                                                margin:10px 0px 10px 0px;
-                                                padding:10px;
-                                                text-decoration:none;
-						min-height: 80px;
-						overflow: auto;
-                                        }
-                                </style>
 				<div id="stream">
 					<div class="streamcontent" id="{{ id }}" style="display: block;">
 						<div class="avatar_div"><img src="{{ story_avatar }}" class="avatar" alt="Instaright User {{ story_user|escape }} avatar" /></div>
@@ -147,7 +128,7 @@
 <div class="clearfix"></div> 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
