--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
                 <meta name="description" content="Instaright Social Bookmarking app and recommendation engine. Discover, save and share trending articles while increasing your productivity." />
-                <meta name="keywords" content="Instaright, discover, social discovery, share, social recommendation, read, read it later, download instaright firefox addon, download instaright chrome extension, Instapaper addon for firefox,instapaper chrome extension, import delicious bookmarks to instapaper, export delicious bookmarks to instapaper" />
+                <meta name="keywords" content="Instaright, discover, social discovery, share, social recommendation, read, read it later, download instaright firefox addon, instaright chrome extension, Instapaper addon firefox,instapaper chrome extension, export delicious bookmarks to instapaper" />
 		<meta name="fragment" content="!" />
 		<meta name="title" content="Instaright Social Bookmarking and recommendation app" />
 		<meta name="msvalidate.01" content="528D5BB57C5DA4E8D9687FC13298CDC9" />
@@ -150,7 +150,7 @@
                         			original_url = e['ol'];
 						embeded = e['e'];
 
-						updated_ago_string = "<a href=\""+link+"\">as seen "+updated_string(dateUpdated)+" on Instaright "+ source+"</a>";
+						updated_ago_string = "<a href=\""+link+"\">as seen "+updated_string(dateUpdated)+" on "+ source+"</a>";
                         			container = document.createElement('div');
                         			containerAvatar = document.createElement('div');
 						containerAvatar.setAttribute('class', 'avatar_div');
@@ -287,25 +287,6 @@
                                 </h2> 
                         </div> 
                         <div class="left_box_mid">
-                                <style> 
-                                        #streammap{
-                                                border:8px solid #ffffff;
-                                                height:230px;
-                                                margin:0px 0px 10px 0px;
-                                                width:660px;
-                                        }
-                                        .scan, .streamcontent {
-                                                -moz-border-radius:15px;
-                                                border:1px solid #ADA699;
-                                                clear:both;
-                                                display:block;
-                                                margin:10px 0px 10px 0px;
-                                                padding:10px;
-                                                text-decoration:none;
-						min-height: 80px;
-						overflow: auto;
-                                        }
-                                </style>
 				<div id="stream_loader"><p><img src="/static/images/loader.gif" alt="Instaright Stream Loading"/> Loading Stream ...</p></div>
 				<div id="stream"><div id="stream_loader"><p><img src="/static/images/loader.gif" alt="Instaright Stream Loading"/> Loading Stream ...</p></div></div>
                         </div>
@@ -323,7 +304,7 @@
 				<p class="social_media"><b>Save: Instaright browser plugins</b></p>
                                 <div class="text-align: center; width: 270px;">
 					<p style="text-align: center;"><a title="Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools" ><span>Instaright Firefox addon and Chrome Extension</span></a></p>
-                                	<p style="text-align: center;"><a title="Download Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools"><img src="static/images/install_now.png" style="width:220px; height: 60px;" alt="Instapaper firefox addon"/></a></p>
+                                	<p style="text-align: center;"><a title="Download Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools"><img src="static/images/install_now.png" style="width:220px; height: 60px;" alt="Instaright firefox addon"/></a></p>
 				</div>
 				<p class="social_media"><b>Discover: Realtime Notifications</b></p>
                                 <div class="text-align: center; width: 270px;">
@@ -349,7 +330,7 @@
                                 <ul>
                                         <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instaright on twitter" alt="Instaright on Twitter"/><a rel="me" href="http://twitter.com/instaright">Twitter</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instaright on facebook" alt="Instaright on Facebook"/><a rel="me" href="http://www.facebook.com/instaright">Facebook Page</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instaright blog" alt="Instaright blog"/><a rel="me" href="http://instaright.tumblr.com/">Blog</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instaright blog" alt="Instaright blog"/><a rel="me" href="http://blog.instaright.com/">Blog</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/arrow_right.png" alt="Instapaper Delicious Importer"/><a href="/tools/delicious" title="Import Delicious Bookmarks to Instapaper">Delicious Importer</a></li>
                                 </ul>
                         </div>
@@ -369,7 +350,7 @@
 <div class="clearfix"></div> 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
