--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -6,8 +6,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width = 900"/>
         <meta name="keywords" content="Instaright bookmarks, instaright realtime social bookmarks login, creat account instaright"/>
+	<meta name="description" content="Choose identity which you'll use on Instaright " />
         
-        <title>Import Delicious Bookmarks</title>
+        <title>Sign up for Instaright</title>
         
 <title>Login with existing account</title>
 </head>
