--- a/backend/templates/category_list.html
+++ b/backend/templates/category_list.html
@@ -3,8 +3,8 @@
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
                 <meta name="description" content="List of Instaright Categories and topics" />
-                <meta name="keywords" content="Instaright categories, instaright topics, social bookmark, social bookmarking, social recommendation, Instapaper firefox, Instapaper for firefox, instapaper import delicious, import delicious bookmarks, instapaper delicious, delicious importer, export delicious bookmarks to instapaper, instapaper addon for firefox, instapaper add-on firefox, instapaper add-on, social bookmark, read it later" />
-		<meta name="title" content="Instaright Social Bookmarking and recommendation app" />
+                <meta name="keywords" content="Instaright categories, instaright topics, trending instaright categories, instaright cats" />
+		<meta name="title" content="Instaright trending categories" />
                 <link rel="stylesheet" type="text/css" href="../css/style.css" />
                 <script src='../static/javascript/invite.js'></script>
                 <script src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"></script>
@@ -15,7 +15,7 @@
 		<!-- fancybox -->
 		<script type="text/javascript" src="/static/javascript/jquery.fancybox-1.3.4.pack.js"></script>
 		<link rel="stylesheet" href="/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-                <title>Instaright - SocialBookmarking and recommendation engine</title>
+                <title>Instaright Trending Categories</title>
 
                 <!-- google analytics -->
                 <script type="text/javascript">
@@ -55,20 +55,19 @@
 						});
 					$("#jid_result").hide();
 					$("#invite_jid").focus();
-                			div = document.getElementById('category_list');
-					var i=1;
+					/*var i=1;
 					$H({{ categories }}).each(function(pair){
 						cat = pair.key;
 						element = '<p class="text_bubble"><a href="/category/'+cat+'" title="Instaright popular category '+cat+'"><span>'+cat+'</span></a></p>';
                         			$("#category_list").append(element);
 						if (i % 5 == 0) $("#category_list").append('<br><br>');
 						i++;
-					});
+					});*/
 
 			});
 
 			var feed;
-			function noUpdates(){
+			/*function noUpdates(){
                         	container = document.createElement('div');
                         	containerAvatar = document.createElement('div');
 
@@ -90,7 +89,7 @@
                         	div.insertBefore(container, div.firstChild);
 
 
-			}
+			}*/
 
 </script>
 
@@ -123,25 +122,7 @@
                                 </h2> 
                         </div> 
                         <div class="left_box_mid">
-                                <style> 
-                                        #streammap{
-                                                border:8px solid #ffffff;
-                                                height:230px;
-                                                margin:0px 0px 10px 0px;
-                                                width:660px;
-                                        }
-                                        .scan, .streamcontent {
-                                                -moz-border-radius:15px;
-                                                border:1px solid #ADA699;
-                                                clear:both;
-                                                display:block;
-                                                margin:10px 0px 10px 0px;
-                                                padding:10px;
-                                                text-decoration:none;
-						height: 80px;
-                                        }
-                                </style>
-                                <div id="category_list"></div>
+				<div id="category_list">{{ categories }}</div>
                         </div>
 			<div class="left_bot_mid">
 				<div class="left_bot_left"></div>
@@ -150,13 +131,20 @@
                 </div>
                 <div id="right_col" class="grid_6">
                         <div id="right_box_top">
-                                <p style="text-align: center;">Instaright browser addons</p>
-                                <p style="text-align: center;"><a title="Instapaper firefox addon instapaper chrome extension" href="/tools"><img src="/static/images/install_now.png" style="width:220px; height: 60px;" alt="Instapaper firefox addon"/></a></p>
-                                <p class="social_media">Want to get updates on IM?</p>
+				<p class="social_media"><b>What is Instaright?</b></p>
                                 <div class="text-align: center; width: 270px;">
-                                        Instaright provides updates on your favorite IM client. <br>
+					<p>The fast, easy and effort-free way to <b>save</b>, <b>discover</b> and <b>share</b> information all over web. Easy to start, easy to use. Organizes and streamlines infromation into categories providing clear presentation. </p>
+				</div>
+				<p class="social_media"><b>Save: Instaright browser plugins</b></p>
+                                <div class="text-align: center; width: 270px;">
+					<p style="text-align: center;"><a title="Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools" ><span>Instaright Firefox addon and Chrome Extension</span></a></p>
+                                	<p style="text-align: center;"><a title="Download Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools"><img src="static/images/install_now.png" style="width:220px; height: 60px;" alt="Instaright firefox addon"/></a></p>
+				</div>
+				<p class="social_media"><b>Discover: Realtime Notifications</b></p>
+                                <div class="text-align: center; width: 270px;">
+					<p>Discover infromation in realtime article feed or via Instant messenger. Subscribe to categories and topics of your interest. Instaright provides updates on your favorite IM client. <br></p>
                                         <p id="jabbers">
-                                        <img src="/static/images/messenger.png"/><img src="/static/images/gtalk.png"/><img src="/static/images/aim.png"/></p>
+                                        <img src="/static/images/messenger.png" alt="Instaright Yahoo Messenger Support"/><img src="/static/images/gtalk.png" alt="Instaright Google Talk support"/><img src="/static/images/aim.png" alt="Instaright AIM support"/></p>
 					<p>To get started enter your jabber id and <span style="color:#0066CC;">press Enter</span></p>
                                         </div><p></p><div>
                                         <input type="text" id="invite_jid" value="Enter your jabber id" />
@@ -167,12 +155,16 @@
 
                                         <p></p>
                                 </div>
+				<p class="social_media"><b>Share: Instaright on social media</b></p>
+                                <div class="text-align: center; width: 270px;">
+					<p>Instaright detects highly engaged content and leverage it across social networks</p>
+				</div>
                         </div>
                         <div id="right_box_mid">
                                 <ul>
-                                        <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instapaper tools on twitter"/><a href="http://twitter.com/instaright">Twitter</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a href="http://www.facebook.com/instaright">Facebook Page</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instapaper tools blog"/><a href="http://instaright.tumblr.com/">Blog</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instaright twitter account"/><a href="http://twitter.com/instaright">Twitter</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instaright facebook page"/><a href="http://www.facebook.com/instaright">Facebook Page</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instaright blog"/><a href="http://blog.instaright.com/">Blog</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Import Delicious Bookmarks to Instapaper">Delicious Importer</a></li>
                                 </ul>
                         </div>
@@ -192,7 +184,7 @@
 <div class="clearfix"></div> 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
