--- a/backend/templates/html_snapshot.html
+++ b/backend/templates/html_snapshot.html
@@ -59,25 +59,6 @@
                                 </h2> 
                         </div> 
                         <div class="article_left_box_mid">
-                                <style type="text/css"> 
-                                        #streammap{
-                                                border:8px solid #ffffff;
-                                                height:230px;
-                                                margin:0px 0px 10px 0px;
-                                                width:660px;
-                                        }
-                                        .scan, .streamcontent {
-                                                -moz-border-radius:15px;
-                                                border:1px solid #ADA699;
-                                                clear:both;
-                                                display:block;
-                                                margin:10px 0px 10px 0px;
-                                                padding:10px;
-                                                text-decoration:none;
-						min-height: 80px;
-						overflow: auto;
-                                        }
-                                </style>
 				<div id="stream">
 					{% for l in links %}
 					<div class="streamcontent" id="{{ l.u.id }}" style="display: block;">
@@ -89,7 +70,7 @@
 						{% if l.u.lc %}
 						<div class="category_div">{{ l.u.html_lc }}</div>
 						{% endif %}
-						<div class="content_footer" info="{{ l.u.u }}"><a href="{{ l.u.l }}" title="{{ l.u.t }}">as seen now on Instaright {{ l.u.source }} </a></div>
+						<div class="content_footer" info="{{ l.u.u }}"><a href="{{ l.u.l }}" title="{{ l.u.t }}">as seen now on {{ l.u.source }} </a></div>
 					</div>
 					{% endfor %}
 				</div>
@@ -110,7 +91,7 @@
 <div class="clearfix"></div> 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
