reducing keyword clutter

--- a/backend/templates/article.html
+++ b/backend/templates/article.html
@@ -3,9 +3,9 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Instaright Story - {{ title }}" />
+		<meta name="description" content="{{ title }}" />
 		<meta name="keywords" content="Instaright, social bookmark, social bookmarking, social recommendation, {{ title }}, read it later" />
-		<meta name="title" content="Instaright Story - {{ title }}" />
+		<meta name="title" content="{{ title }}" />
                 <link rel="stylesheet" type="text/css" href="http://www.instaright.com/css/style.css" />
                 <script type="text/javascript" src="http://www.instaright.com/static/javascript/instaright.js"></script>
                 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
@@ -18,7 +18,7 @@
 		<!-- fancybox -->
 		<script type="text/javascript" src="http://www.instaright.com/static/javascript/jquery.fancybox-1.3.4.pack.js"></script>
 		<link rel="stylesheet" href="/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-		<title>Instaright Story - {{ title }}</title>
+		<title>{{ title }}</title>
 
                 <!-- google analytics -->
                 <script type="text/javascript">
@@ -128,7 +128,7 @@
 <div class="clearfix"></div> 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
