--- a/backend/templates/category.html
+++ b/backend/templates/category.html
@@ -294,7 +294,7 @@
 				<p class="social_media"><b>Save: Instaright browser plugins</b></p>
                                 <div class="text-align: center; width: 270px;">
 					<p style="text-align: center;"><a title="Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools" ><span>Instaright Firefox addon and Chrome Extension</span></a></p>
-                                	<p style="text-align: center;"><a title="Download Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools"><img src="static/images/install_now.png" style="width:220px; height: 60px;" alt="Instaright firefox addon"/></a></p>
+                                	<p style="text-align: center;"><a title="Download Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools"><img src="/static/images/download_instaright.png" style="width:220px; height: 60px;" alt="Instaright firefox addon"/></a></p>
 				</div>
 				<p class="social_media"><b>Discover: Realtime Notifications</b></p>
                                 <div class="text-align: center; width: 270px;">
@@ -340,7 +340,7 @@
 <div class="clearfix"></div> 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
