--- a/backend/templates/tools.html
+++ b/backend/templates/tools.html
@@ -84,7 +84,7 @@
         <div class="slogan">Instaright tools - Browser plugins, importers and more</div>
 	<div class="addons">
 		<div class="inline">
-			<a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/"><img src="static/images/instaright_firefox_addon.png" /></a>
+			<a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/"><img src="/static/images/instaright_firefox_addon.png" /></a>
 			<div class="version">
 				<ol><li>Version 0.4.2.3</li>
 				<li>(Works with Windows, MacOS, Linux)</li></ol>
@@ -100,7 +100,7 @@
 			</div>
 		</div>
 		<div class="inline">
-			<a href="https://chrome.google.com/webstore/detail/mklfjcmekplnempnkclmdclnbedadphf" ><img src="static/images/instaright_chrome_extension.png" /></a>
+			<a href="https://chrome.google.com/webstore/detail/mklfjcmekplnempnkclmdclnbedadphf" ><img src="/static/images/instaright_chrome_extension.png" /></a>
 			<div class="version">
 				<ol><li>Version 0.1</li>
 				<li>(Works with Windows, MacOS, Linux)</li></ol>
@@ -125,7 +125,7 @@
 <br class="clear-both" />
 <div id="footer-container">
      <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
      </div>
 </div>
 <!-- GETSATISFACTION -->
