--- a/backend/templates/category_list.html
+++ b/backend/templates/category_list.html
@@ -183,9 +183,7 @@
 
 <div class="clearfix"></div> 
 <div class="footer-container">
-        <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
-        </div>
+	{{ page_footer }}
 </div>
 <!-- GETSATISFACTION -->
 <script type="text/javascript" charset="utf-8">
