--- a/backend/templates/user_info.html
+++ b/backend/templates/user_info.html
@@ -171,7 +171,8 @@
 					    	<div class="account_field_data"><img src="/static/images/flickr_small.png" />&nbsp;&nbsp;</div>
 					    	<div class="profile_remove"><a href="/oauth/flickr/login">Connect</a></div>
 					    {% endif %}
-					    <div class="profile_remove"><a href="/oauth/flickr/login">Update</a></div>
+					    <div class="profile_remove"><a href="https://picplz.com/oauth2/authenticate?client_id=BnYEDMYMrqaKP7DYvQS55meeMHG6s2CA&response_type=code&redirect_uri=http%3A//www.instaright.com/oauth2/picplz/callback">Update Picplz</a></div>
+
 				    	    <br style="clear:both;"/>
 				    </div>
 				    <h5><span>Identities</span></h5>
