--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -349,11 +349,10 @@
 
 <div class="clearfix"></div> 
 <div class="footer-container">
-        <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="/feed" title="Instaright Feed">Feed</a></p>
-        </div>
+	{{ page_footer }}
 </div>
 <!-- GETSATISFACTION -->
+<!-- IMPORTANT: bad for user experience  
 <script type="text/javascript" charset="utf-8">
         var is_ssl = ("https:" == document.location.protocol);
         var asset_host = is_ssl ? "https://s3.amazonaws.com/getsatisfaction.com/" : "http://s3.amazonaws.com/getsatisfaction.com/";
@@ -369,7 +368,7 @@ feedback_widget_options.placement = "left";
 feedback_widget_options.color = "#222";
 feedback_widget_options.style = "idea";
 var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
-</script>
+</script-->
 <!-- End GETSATISFACTION -->
 <!-- Google Website Optimizer Tracking Script -->
 <script type="text/javascript">
