--- a/backend/templates/privacy_policy.html
+++ b/backend/templates/privacy_policy.html
@@ -52,9 +52,7 @@
             
             <div class="clearfix"></div> 
             <div id="footer-container">
-                <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                	<p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
-                </div>
+	    	{{ page_footer }}
             </div>
         <!-- End container" -->
         </div>
