--- a/backend/templates/article.html
+++ b/backend/templates/article.html
@@ -126,9 +126,7 @@
 </div>
 
 <div class="clearfix"></div> 
-<div class="footer-container">
-	{{ page_footer }}
-</div>
+{% extends 'footer.html' %}
 <!-- GETSATISFACTION -->
 <script type="text/javascript" charset="utf-8">
         var is_ssl = ("https:" == document.location.protocol);
