--- a/backend/templates/domain.html
+++ b/backend/templates/domain.html
@@ -350,7 +350,7 @@
 
 <div class="clearfix"></div> 
 <div class="footer-container">
-	{{ page_footer }}
+	{% extends 'footer.html' %}
 </div>
 <!-- GETSATISFACTION -->
 <script type="text/javascript" charset="utf-8">
