--- a/backend/templates/privacy_policy.html
+++ b/backend/templates/privacy_policy.html
@@ -51,9 +51,7 @@
 
             
             <div class="clearfix"></div> 
-            <div id="footer-container">
-	    	{{ page_footer }}
-            </div>
+	{% extends 'footer.html' %}
         <!-- End container" -->
         </div>
 <!-- GETSATISFACTION -->
