--- a/backend/templates/category_list.html
+++ b/backend/templates/category_list.html
@@ -182,9 +182,8 @@
 </div>
 
 <div class="clearfix"></div> 
-<div class="footer-container">
-	{{ page_footer }}
-</div>
+{% extends 'footer.html' %}
+
 <!-- GETSATISFACTION -->
 <script type="text/javascript" charset="utf-8">
         var is_ssl = ("https:" == document.location.protocol);
