--- a/backend/templates/html_snapshot.html
+++ b/backend/templates/html_snapshot.html
@@ -89,11 +89,7 @@
 </div>
 
 <div class="clearfix"></div> 
-<div class="footer-container">
-        <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://blog.instaright.com" title="instaright blog">blog</a> | <a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
-        </div>
-</div>
+{% extends 'footer.html' %}
 <!-- GETSATISFACTION -->
 <script type="text/javascript" charset="utf-8">
         var is_ssl = ("https:" == document.location.protocol);
