--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -296,141 +296,120 @@
 			</div>
                 </div>
                 <div id="right_col" class="grid_6">
-                        <div id="right_box_top">
-				<p class="social_media"><b>What is Instaright?</b></p>
-                                <div class="text-align: center; width: 270px;">
-					<p>The fast, easy and effort-free way to <b>save</b>, <b>discover</b> and <b>share</b> information all over web. Easy to start, easy to use. Organizes and streamlines infromation into categories providing clear presentation. </p>
-				</div>
-				<p class="social_media"><b>Save: Instaright browser plugins</b></p>
-                                <div class="text-align: center; width: 270px;">
-					<p style="text-align: center;"><a title="Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools" ><span>Instaright Firefox addon and Chrome Extension</span></a></p>
-                                	<p style="text-align: center;"><a title="Download Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools"><img src="/static/images/download_instaright.png" style="width:220px; height: 60px;" alt="Instaright firefox addon"/></a></p>
-				</div>
-				<p class="social_media"><b>Discover: Realtime Notifications</b></p>
-                                <div class="text-align: center; width: 270px;">
-					<p>Discover infromation in realtime article feed or via Instant messenger. Subscribe to categories and topics of your interest. Instaright provides updates on your favorite IM client. <br></p>
-                                        <p id="jabbers">
-                                        <img src="/static/images/messenger.png" alt="Instaright Yahoo Messenger Support"/><img src="/static/images/gtalk.png" alt="Instaright Google Talk support"/><img src="/static/images/aim.png" alt="Instaright AIM support"/></p>
-					<p>To get started enter your jabber id and <span style="color:#0066CC;">press Enter</span></p>
-                                        </div><p></p><div>
-                                        <input type="text" id="invite_jid" value="Enter your jabber id" />
-                                        <div id="jid_result" style="text-align: center; "></div>
-					<p>As next step, you'll get contact request from instaright@appspot.com .
-					Accept request from and type <b>/help</b><br>
-					Next? Awesomeness is head of you!</p>
-
-                                        <p></p>
-                                </div>
-				<p class="social_media"><b>Share: Instaright on social media</b></p>
-                                <div class="text-align: center; width: 270px;">
-					<p>Instaright detects highly engaged content and leverage it across social networks</p>
-				</div>
-                        </div>
                         <div id="right_box_mid">
-                                <ul>
-                                        <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instaright on twitter" alt="Instaright on Twitter"/><a rel="me" href="http://twitter.com/instaright">Twitter</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instaright on facebook" alt="Instaright on Facebook"/><a rel="me" href="http://www.facebook.com/instaright">Facebook Page</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instaright blog" alt="Instaright blog"/><a rel="me" href="http://blog.instaright.com/">Blog</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/arrow_right.png" alt="Instapaper Delicious Importer"/><a href="/tools/delicious" title="Import Delicious Bookmarks to Instapaper">Delicious Importer</a></li>
-                                </ul>
-                        </div>
-                        <div id="right_box_bot">
-                                <div>
-
-                                </div>
-
-                        </div>
-                </div>
-        <div class="clear"></div> 
-        <div class="push"></div> 
+				<div id="right_box_top">
+					<p class="social_media"><b>What is Instaright?</b></p>
+					<div class="text-align: center; width: 270px;">
+						<p>The fast, easy and effort-free way to <b>save</b>, <b>discover</b> and <b>share</b> information all over web. Easy to start, easy to use. Organizes and streamlines infromation into categories providing clear presentation. </p>
+					</div>
+					<p class="social_media"><b>Save: Instaright browser plugins</b></p>
+					<div class="text-align: center; width: 270px;">
+						<p style="text-align: center;"><a title="Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools" ><span>Instaright Firefox addon and Chrome Extension</span></a></p>
+						<p style="text-align: center;"><a title="Download Instaright Browser addons - Instaright Firefox and Chrome addons" href="/tools"><img src="/static/images/download_instaright.png" style="width:220px; height: 60px;" alt="Instaright firefox addon"/></a></p>
+					</div>
+					<p class="social_media"><b>Discover: Realtime Notifications</b></p>
+					<div class="text-align: center; width: 270px;">
+						<p>Discover infromation in realtime article feed or via Instant messenger. Subscribe to categories and topics of your interest. Instaright provides updates on your favorite IM client. <br></p>
+						<p id="jabbers">
+						<img src="/static/images/messenger.png" alt="Instaright Yahoo Messenger Support"/><img src="/static/images/gtalk.png" alt="Instaright Google Talk support"/><img src="/static/images/aim.png" alt="Instaright AIM support"/></p>
+					</div>
+					<p class="social_media"><b>Share: Instaright on social media</b></p>
+					<div class="text-align: center; width: 270px;">
+						<p>Instaright detects highly engaged content and leverage it across social networks</p>
+					</div>
+				</div>
+			</div>
+			<div id="right_box_bot">
+			</div>
+		</div>
+		<div class="clear"></div> 
+		<div class="push"></div> 
+	</div>
+	<div class="clearfix"></div> 
 </div>
+
 <div class="clearfix"></div> 
-</div>
-
-<div class="clearfix"></div> 
-<div class="footer-container">
-	{{ page_footer }}
-</div>
+{% extends 'footer.html' %}
 <!-- GETSATISFACTION -->
 <!-- IMPORTANT: bad for user experience  
 <script type="text/javascript" charset="utf-8">
-        var is_ssl = ("https:" == document.location.protocol);
-        var asset_host = is_ssl ? "https://s3.amazonaws.com/getsatisfaction.com/" : "http://s3.amazonaws.com/getsatisfaction.com/";
-        document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
-        </script>
+	var is_ssl = ("https:" == document.location.protocol);
+	var asset_host = is_ssl ? "https://s3.amazonaws.com/getsatisfaction.com/" : "http://s3.amazonaws.com/getsatisfaction.com/";
+	document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
 
-        <script type="text/javascript" charset="utf-8">
-                var feedback_widget_options = {};
+	<script type="text/javascript" charset="utf-8">
+		var feedback_widget_options = {};
 
-feedback_widget_options.display = "overlay";  
-feedback_widget_options.company = "instaright";
-feedback_widget_options.placement = "left";
-feedback_widget_options.color = "#222";
-feedback_widget_options.style = "idea";
-var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
-</script-->
-<!-- End GETSATISFACTION -->
-<!-- Google Website Optimizer Tracking Script -->
-<script type="text/javascript">
-        if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
-                        (document.location.protocol=='https:'?'s://ssl':'://www')+
-                        '.google-analytics.com/ga.js"></sc'+'ript>')</script>
-                <script type="text/javascript">
-                        try {
-                                var gwoTracker=_gat._getTracker("UA-9005862-6");
-                                gwoTracker._trackPageview("/2188815013/test");
-                                }catch(err){}
-                </script>
+		feedback_widget_options.display = "overlay";  
+		feedback_widget_options.company = "instaright";
+		feedback_widget_options.placement = "left";
+		feedback_widget_options.color = "#222";
+		feedback_widget_options.style = "idea";
+		var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
+		</script-->
+		<!-- End GETSATISFACTION -->
+		<!-- Google Website Optimizer Tracking Script -->
+		<script type="text/javascript">
+			if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
+					(document.location.protocol=='https:'?'s://ssl':'://www')+
+					'.google-analytics.com/ga.js"></sc'+'ript>')</script>
+				<script type="text/javascript">
+					try {
+						var gwoTracker=_gat._getTracker("UA-9005862-6");
+						gwoTracker._trackPageview("/2188815013/test");
+					}catch(err){}
+</script>
 <!-- End of Google Website Optimizer Tracking Script -->
 <noscript>
 	<h1>Instaright Realtime Bookmarking and recommendation engine<h1>
-	<h2>Instaright Categories</h2>
-	<h3>Following Instaright categories</h3><p> are most popular over internet</p>
-	<p>
-	<h5>Apple<h5>
-	<a href="http://www.instaright.com/category/apple" title="Instaright category - apple">Instaright category - Apple</a>
-	<h5>Hacking<h5>
-	<a href="http://www.instaright.com/category/hack" title="Instaright category - hack">Instaright category - Hack</a>
-	<h5>Steve Jobs<h5>
-	<a href="http://www.instaright.com/category/stevejobs" title="Instaright category - steve jobs">Instaright category - Steve Jobs</a>
-	<h5>Wealth<h5>
-	<a href="http://www.instaright.com/category/wealth" title="Instaright category - wealth">Instaright category - Wealth</a>
-	<h5>Culture<h5>
-	<a href="http://www.instaright.com/category/cultutre" title="Instaright category - cultutre">Instaright category - cultutre</a>
-	<h5>Computer<h5>
-	<a href="http://www.instaright.com/category/computer" title="Instaright category - computer">Instaright category - computer</a>
-	<h5>Design<h5>
-	<a href="http://www.instaright.com/category/design" title="Instaright category - design">Instaright category - design</a>
-	<h5>World<h5>
-	<a href="http://www.instaright.com/category/world" title="Instaright category - world">Instaright category - world</a>
-	<h5>Politics<h5>
-	<a href="http://www.instaright.com/category/politics" title="Instaright category - politics">Instaright category - politics</a>
-	<h5>Crime<h5>
-	<a href="http://www.instaright.com/category/crime" title="Instaright category - crime">Instaright category - crime</a>
-	<h5>Technology<h5>
-	<a href="http://www.instaright.com/category/technology" title="Instaright category - technology">Instaright category - technology</a>
-	<h5>Tutorial<h5>
-	<a href="http://www.instaright.com/category/tutorial" title="Instaright category - tutorial">Instaright category - tutorial</a>
-	<h5>Toread<h5>
-	<a href="http://www.instaright.com/category/toread" title="Instaright category - toread">Instaright category - toread</a>
-	<h5>Arts<h5>
-	<a href="http://www.instaright.com/category/arts" title="Instaright category - arts">Instaright category - arts</a>
-	<h5>Psychology<h5>
-	<a href="http://www.instaright.com/category/psychology" title="Instaright category - psychology">Instaright category - psychology</a>
-	<h5>Entertainment<h5>
-	<a href="http://www.instaright.com/category/entertainment" title="Instaright category - entertainment">Instaright category - entertainment</a>
-	<h5>Sports<h5>
-	<a href="http://www.instaright.com/category/sports" title="Instaright category - sports">Instaright category - sports</a>
-	<h5>Religion<h5>
-	<a href="http://www.instaright.com/category/religion" title="Instaright category - religion">Instaright category - religion</a>
-	<h5>Health<h5>
-	<a href="http://www.instaright.com/category/health" title="Instaright category - health">Instaright category - health</a>
-	<h5>Internet<h5>
-	<a href="http://www.instaright.com/category/internet" title="Instaright category - internet">Instaright category - internet</a>
-	<p>Check out more Instaright Articles<p><a href="http://www.instaright.com/feed?out=json" title="Instaright Article Feed">Instaright Article Feed</a></p></p>
-	</p>
-</noscript>
+			<h2>Instaright Categories</h2>
+			<h3>Following Instaright categories</h3><p> are most popular over internet</p>
+			<p>
+			<h5>Apple<h5>
+					<a href="http://www.instaright.com/category/apple" title="Instaright category - apple">Instaright category - Apple</a>
+					<h5>Hacking<h5>
+							<a href="http://www.instaright.com/category/hack" title="Instaright category - hack">Instaright category - Hack</a>
+							<h5>Steve Jobs<h5>
+									<a href="http://www.instaright.com/category/stevejobs" title="Instaright category - steve jobs">Instaright category - Steve Jobs</a>
+									<h5>Wealth<h5>
+											<a href="http://www.instaright.com/category/wealth" title="Instaright category - wealth">Instaright category - Wealth</a>
+											<h5>Culture<h5>
+													<a href="http://www.instaright.com/category/cultutre" title="Instaright category - cultutre">Instaright category - cultutre</a>
+													<h5>Computer<h5>
+															<a href="http://www.instaright.com/category/computer" title="Instaright category - computer">Instaright category - computer</a>
+															<h5>Design<h5>
+																	<a href="http://www.instaright.com/category/design" title="Instaright category - design">Instaright category - design</a>
+																	<h5>World<h5>
+																			<a href="http://www.instaright.com/category/world" title="Instaright category - world">Instaright category - world</a>
+																			<h5>Politics<h5>
+																					<a href="http://www.instaright.com/category/politics" title="Instaright category - politics">Instaright category - politics</a>
+																					<h5>Crime<h5>
+																							<a href="http://www.instaright.com/category/crime" title="Instaright category - crime">Instaright category - crime</a>
+																							<h5>Technology<h5>
+																									<a href="http://www.instaright.com/category/technology" title="Instaright category - technology">Instaright category - technology</a>
+																									<h5>Tutorial<h5>
+																											<a href="http://www.instaright.com/category/tutorial" title="Instaright category - tutorial">Instaright category - tutorial</a>
+																											<h5>Toread<h5>
+																													<a href="http://www.instaright.com/category/toread" title="Instaright category - toread">Instaright category - toread</a>
+																													<h5>Arts<h5>
+																															<a href="http://www.instaright.com/category/arts" title="Instaright category - arts">Instaright category - arts</a>
+																															<h5>Psychology<h5>
+																																	<a href="http://www.instaright.com/category/psychology" title="Instaright category - psychology">Instaright category - psychology</a>
+																																	<h5>Entertainment<h5>
+																																			<a href="http://www.instaright.com/category/entertainment" title="Instaright category - entertainment">Instaright category - entertainment</a>
+																																			<h5>Sports<h5>
+																																					<a href="http://www.instaright.com/category/sports" title="Instaright category - sports">Instaright category - sports</a>
+																																					<h5>Religion<h5>
+																																							<a href="http://www.instaright.com/category/religion" title="Instaright category - religion">Instaright category - religion</a>
+																																							<h5>Health<h5>
+																																									<a href="http://www.instaright.com/category/health" title="Instaright category - health">Instaright category - health</a>
+																																									<h5>Internet<h5>
+																																											<a href="http://www.instaright.com/category/internet" title="Instaright category - internet">Instaright category - internet</a>
+																																											<p>Check out more Instaright Articles<p><a href="http://www.instaright.com/feed?out=json" title="Instaright Article Feed">Instaright Article Feed</a></p></p>
+																																											</p>
+																																										</noscript>
 
 
-        </body>
-</html>
+																																									</body>
+																																								</html>
